--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,26 +7,15 @@ repos:
     rev: v4.3.0
     hooks:
       - id: check-yaml
-      # - id: check-toml
       - id: check-merge-conflict
-      - id: trailing-whitespace
-      # - id: check-symlinks
       - id: end-of-file-fixer
+      - id: trailing-whitespace
       - id: check-added-large-files
         args: [--maxkb=51200]
-  - repo: https://github.com/dnephin/pre-commit-golang
-    rev: v0.5.0
+  - repo: https://gitlab.intsig.net/wenbo_hu/pre-commit-golang
+    rev: v1.0.2
     hooks:
-      - id: go-fmt
-      # - id: go-vet
-      # - id: go-lint
-      - id: go-imports
+      - id: golines # requires github.com/segmentio/golines
+      - id: gofumpt # requires github.com/mvdan/gofumpt
+      # - id: golangci-lint # requires github.com/golangci/golangci-lint
       - id: go-mod-tidy
-      - id: golangci-lint
-      # - id: go-cyclo
-      #   args: [-over=15]
-      # - id: validate-toml
-      # - id: no-go-testing
-      # - id: go-critic
-      # - id: go-unit-tests
-      # - id: go-build
